# firmaSoft

./: CMakeLists.txt  main.cpp  tester.cpp  tester.h
headers/: GUI.h  Observable.h  Observer.h  TableModel.h  repo.h  service.h  soft.h
sources/: GUI.cpp  repo.cpp  service.cpp  soft.cpp
